--- a/index.html
+++ b/index.html
@@ -124,11 +124,12 @@
 
   <!-- QR бөлігі -->
   <div class="qr-section">
-    <img src="qr-code.png" alt="Жауап енгізу бетінің QR коды">
+    <img src="qr.png" alt="Жауап енгізу бетінің QR коды">
     <p>📱 <strong>Жауаптарыңызды енгізу үшін</strong> — осы QR кодты сканерлеңіздер!</p>
   </div>
 
 </body>
 </html>
+
 
 
